k8s/auth-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-celery
  namespace: authentication
  labels: 
    app: auth-celery

spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-celery
  
  template:
    metadata:
      labels:
        app: auth-celery
    
    spec:
      containers:
      - name: auth-celery
        image: 
        command: ['celery', '-A', 'server.celery', 'worker', '-l', 'INFO']
