k8s/celery-flower.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower
  labels:
    deployment: flower
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: celery-flower
  template:
    metadata:
      labels:
        pod: celery-flower
      spec:
        containers:
        - name: flower
          image: mher/flower:0.9.5
          ports:
            - containerPort: 5555
