k8s/messaging-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-celery
  namespace: messaging
  labels:
    app: messaging-celery

spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-celery

  template:
    metadata:
      labels:
        app: messaging-celery

    spec:
      containers:
        - name: messaging-celery
          image: saarskittel/messaging-k8s
          command: ["celery", "-A", "server.celery", "worker", "-l", "INFO"]
