k8s/authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
  labels:
    app: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
        - name: authentication
          image: saarskittel/authentication-k8s
          command: ["/bin/sh", "-c"]
          args:
            [
              "python manage.py makemigrations && python manage.py makemigrations api && python manage.py migrate && gunicorn server.wsgi:application -b 0.0.0.0:8001",
            ]
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
spec:
  selector:
    app: authentication.authentication
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
