k8s/messaging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging
  labels:
    app: messaging

spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging

  template:
    metadata:
      labels:
        app: messaging
    spec:
      containers:
        - name: messaging
          image: saarskittel/messaging-k8s
          command: ["/bin/sh", "-c"]
          args:
            [
              "python manage.py makemigrations && python manage.py makemigrations api && python manage.py migrate && gunicorn server.wsgi:application -b 0.0.0.0:8000",
            ]
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
    app: messaging

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
