k8s/postgres.yaml
# PostgreSQL StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-db
spec:
  serviceName: postgresql-db-service
  selector:
    matchLabels:
      app: postgresql-db
  replicas: 2
  template:
    metadata:
    labels:
      app: postgresql-db

    spec:
      containers:
      - name: postgresql-db
        image: postgres:latest
        volumeMounts:
          - name: postgresql-db-disk
            mountPath: /data
volumeClaimTemplates:
- metadata:
  name: postgresql-db-disk
  spec:
    accessModes: ["ReadWriteOnce"]
    resources:
      requests:
        storage: 25Gi

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-db-lb
spec:
  selector:
    app: postgresql-db
    type: LoadBalancer
  ports:
    - port: 5432
      targetPort: 5432
