k8s/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app.com
      http:
        paths:
          - path: /api
            backend:
              serviceName: messaging-service
              servicePort: 8000
          - path: /auth
            backend:
              serviceName: authentication-service
              servicePort: 8001
